--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,8 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+$primary:#333;
+$secondary:#F7941D;
+$breadcrumbs-padding:0px;
+$breadcrumbs-even-child-padding:0px;
